src/App.css
#root {
  width: 100%;
  margin: 0 auto;
}

.new-header-bar {
  position: fixed;
  display: flex;
  justify-content: start;
  align-items: center;
  width: 100%;
  height: fit-content;
  background-color: rgb(0, 0, 0);
  border-bottom: 2px solid #a7a7a7;
  z-index: 25;
}

.new-header-content {
  display: flex;
  justify-content: start;
  align-items: center;
  width: fit-content;
  height: fit-content;
}

.new-header-image {
  width: 50px;
  height: 50px;
  padding: 15px;
  border-radius: 50%;
}

.new-header-text {
  color: #00FDDC;
}

.new-header-bar * {
  user-select: none;
}

.new-header-dropdown {
  height: fit-content;
  width: calc(100% - 50px);
  z-index: 24;
  position: fixed;
  top: -200px;
  background-color: black;
  transition: all 0.35s ease-in-out; 
}

#d2 {
  color: #00FDDC;
}

#d2 .section-header {
  color: #fca1e4;
  font-size: 1em;
  margin-bottom: -15px;
}

#d1 .section-header, #d3 .section-header {
  color: #00FDDC;
  font-size: 1em;
  margin-bottom: -15px;
}

#d1, #d3 {
  color: #fca1e4;
}

.new-header-links {
  margin: 50px 20px 0px 20px;
  width: calc(100% - 50px);
  height: calc( 100% - 70px);
}

.new-header-links p {
  user-select: none;
  font-family: Fira Code;
  font-size: 1.5em;
}

.new-header-link:hover {
  text-decoration: underline;
}

.new-header-navbar {
  display: flex;
  width: 25%;
}

.new-header-navbar * {
  margin: 0px 5px;
}

.navbar-option {
  flex: 1;
  font-size: 1.3em;
  color: #fca1e4;
  font-weight: 500;
  transition: all 0.2s ease-in-out; 
}

.navbar-option:hover {
  color: #00FDDC;
  font-weight: 700;
}

.dropped {
  top: 50px;
}

